# projekat1

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.api  docker-compose.yml  index.html  nginx.conf  pyproject.toml  skripta.py  test_api.py
src/projekat1/: main.py
src/projekat1/api/v1/: posts.py
src/projekat1/core/: config.py  db.py  deps.py
src/projekat1/models/: posts.py
src/projekat1/repos/: posts.py
src/projekat1/services/: posts.py
